добавил новый ендпоинт в для Lead и сиправил кучу косяков
